[gd_scene load_steps=5 format=3 uid="uid://2hmb7stqifxh"]

[ext_resource type="Script" path="res://scenes/point_scenes/ScoreItem.gd" id="1_8d1ut"]
[ext_resource type="FontFile" uid="uid://bgkhf3ustndfv" path="res://assets/fonts/theyrecomingtotakemeaway.ttf" id="1_ngjfo"]

[sub_resource type="LabelSettings" id="LabelSettings_hik1l"]
font = ExtResource("1_ngjfo")
font_size = 75
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kjysp"]

[node name="Score" type="HBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_8d1ut")

[node name="RankLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "#0"
label_settings = SubResource("LabelSettings_hik1l")

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 80
theme_override_styles/separator = SubResource("StyleBoxEmpty_kjysp")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_hik1l")

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 80
theme_override_styles/separator = SubResource("StyleBoxEmpty_kjysp")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
text = "00000"
label_settings = SubResource("LabelSettings_hik1l")

[node name="VSeparator3" type="VSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 80
theme_override_styles/separator = SubResource("StyleBoxEmpty_kjysp")

[node name="DateLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
text = "00000"
label_settings = SubResource("LabelSettings_hik1l")
